# monarch

./: .gitmodules  Cargo.toml  README.md  rust-toolchain.toml
.github/workflows/: test.yml
core/: Cargo.toml
core/src/: hooks.rs  lib.rs  macros.rs
core/src/logging/: client.rs  mod.rs
launcher/: Cargo.toml
launcher/src/: launcher.rs  main.rs
src/: launcher.rs  lib.rs  main.rs
tests/: lib_load.rs
