[package]
name = "monarch"
version = "0.1.0"
edition = "2021"

[lib]
name = "monarch"
crate-type = ["cdylib", "rlib"]

[dependencies]
detour3 = {git = "https://github.com/AnActualEmerald/detour-rs", rev = "6e81424" }
libloading = "0.7.4"
paste = "1.0.11"
tracing = "0.1.37"
winapi = "0.3.9"
windows = { version = "0.44.0", features = ["Foundation"] }

