[package]
name = "monarch_launcher"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.68"
lazy_static = "1.4.0"
libloading = "0.7.4"
# sysinfo = "0.27.7"
tracing = "0.1.37"
monarch = {path = "../core"}
tracing-subscriber = { version = "0.3.16" }
# windows = { version = "0.44.0", features = ["Win32_UI_WindowsAndMessaging", "Win32_System_Registry", "Win32_System_Threading", "Win32_Foundation", "Win32_Security"] }
